# annatomic

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  about.hbs  about.toml  annatomic-78a9eaad8babf997.js  annatomic-78a9eaad8babf997_bg.wasm  index.html  merge-request-checks.sh  pre-release-hook.sh  release.toml  sw.js  third-party-licenses.html
.github/workflows/: code_coverage.yml  rust.yml
src/: app.rs  lib.rs  main.rs  views.rs
src/app/: corpus_tree.rs  editors.rs  job_executor.rs  messages.rs  project.rs  project_manager.rs  tests.rs  util.rs  views.rs  widgets.rs
src/app/corpus_tree/: tests.rs
src/app/editors/: corpus_tree.rs  document_editor.rs  tests.rs
src/app/editors/corpus_tree/: tests.rs
src/app/editors/document_editor/: tests.rs
src/app/project/: cache.rs  tests.rs
src/app/project/snapshots/: annatomic__app__project__tests__export_corpus.snap
src/app/util/: example_generator.rs  token_helper.rs
src/app/util/token_helper/: tests.rs
src/app/views/: demo.rs  edit.rs  select_corpus.rs  start.rs
src/app/views/start/: tests.rs
src/util/: token_helper.rs
src/views/: corpus_list.rs  demo.rs
tests/data/single_sentence/current/: global_statistics.toml
tests/snapshots/: .gitignore
