[package]
authors = ["Thomas Krause <thomas.krause@hu-berlin.de>"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
license = "Apache-2.0"
name = "annatomic"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
  "accesskit",   # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "glow",        # Use the glow rendering backend. Alternative: "wgpu".
  "persistence", # Enable restoring app state when restarting the app.
  "wayland",
  "x11",
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
log = "0.4"

# You only need serde if you want app persistence:
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
egui-notify = "0.18.0"
egui-phosphor = "0.8.0"
graphannis = "3.5.1"
graphannis-core = "3.5.1"
rayon = "1.10.0"
rfd = "0.15.1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
env_logger = "0.11"


[dev-dependencies]
egui_kittest = { version = "0.31.0", features = ["wgpu", "snapshot"] }
insta = "1.41.1"
pretty_assertions = "1.4.1"
tempfile = "3.15.0"

[patch.crates-io]
graphannis = { git = "https://github.com/korpling/graphANNIS.git", branch = "annatomic-improvements" }
graphannis-core = { git = "https://github.com/korpling/graphANNIS.git", branch = "annatomic-improvements" }
egui-phosphor = { git = "https://github.com/bircni/egui-phosphor", branch = "patch/egui-version" }
egui-notify = { git = "https://github.com/bircni/egui-notify.git", branch = "patch/egui-version" }

# Compile some of the dependencies in release mode if when we are ourself in
# "dev" mode (like building debug binaries or running tests)
[profile.dev.package]
graphannis-core.opt-level = 3
graphannis.opt-level = 3
insta.opt-level = 3
similar.opt-level = 3

# Optimize all other dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
